	* Got log saves working in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Insert Cart' button in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Delete' button in rdlogeditb(1).
2017-02-21 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Up' and 'Down' buttons in rdlogeditb(1).
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented button enable logic in 'src/rdlogeditb/editlogdialog.cpp'
	and 'src/rdlogeditb/editlogdialog.h'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'Cut', 'Copy' and 'Paste' buttons.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented check for modified logs in
	'src/rdlogeditb/editlogdialog.cpp' and
	'src/rdlogeditb/editlogdialog.h'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Edit Log Entry' dialog to display a blank cart
	number field if no cart has been selected yet.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Enabled correct display of Chain, Marker and Track events
	in the 'Edit Log' dialog.
	* Enabled correct editing of Chain, Marker and Track events
	in the 'Edit Log Entry' dialog.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'List Logs' dialog in 'src/rdlogeditb/listlogsdialog.cpp'
	and 'src/rdlogeditb/listlogsdialog.h'.
	* Added a 'ServiceBox' widget in 'src/rdlogeditb/servicebox.cpp'
	and 'src/rdlogeditb/servicebox.h'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'capiError()' signal to all model classes in 'src/common/'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added C API error handling to RDLibraryb(1).
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Implemented dynamic login in 'src/common/config.cpp' and
	'src/common/config.h'.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'make rpm' target.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Added desktop entries in 'xdg/'.