@@ -1,1 +1,1 @@
-desktop0	ICON	"rdadmin.ico"
+desktop0	ICON	"rdadminb.ico"
