@@ -1,1 +1,1 @@
-desktop0	ICON	"rdlibrary.ico"
+desktop0	ICON	"rdlibraryb.ico"
