@@ -1,1 +1,1 @@
-desktop0	ICON	"rdlogedit.ico"
+desktop0	ICON	"rdlogeditb.ico"
